temp fix on iOS: no smooth scrolling.

--- a/src/ui/page/PageLayout.scss
+++ b/src/ui/page/PageLayout.scss
@@ -16,6 +16,8 @@ $chenta-ease: cubic-bezier(0.75, 0, 0.25, 1);
   bottom: 0;
   left: 0;
   right: 0;
+  // fix iOS scrolling issue on Terms of Service.
+  overflow: hidden;
 }
 
 .content {
@@ -36,6 +38,12 @@ $chenta-ease: cubic-bezier(0.75, 0, 0.25, 1);
   composes: content;
   filter: saturate(1.3) brightness(0.7) contrast(1.2) blur(4px);
   transform: scale(1.016);
+  // pointer-events: none;
+}
+
+.contentCompletelyLocked {
+  composes: contentBlurred;
+  pointer-events: none;
 }
 
 header {
