--- a/src/ui/routes/legal/Legal.layout.scss
+++ b/src/ui/routes/legal/Legal.layout.scss
@@ -6,8 +6,8 @@
   padding: 10px;
   height: 100%;
   width: 100%;
-  -webkit-overflow-scrolling: touch;
-  overflow-y: scroll;
+  // -webkit-overflow-scrolling: touch;
+  // overflow-y: scroll;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -15,5 +15,19 @@
   z-index: 10000;
   line-height: 1.2;
   @include fallback(background-color, --message-background-color, $messageBackgroundDark);
-  overflow-y: scroll;
+  overflow: auto;
+
+  &::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 0.5;
+    pointer-events: none;
+    z-index: 100;
+  }
 }
